# microservice

./: docker-compose.yml  nginx.conf
test-api-1/: README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml  test-api-1-service.yml
test-api-2/: Dockerfile  main.py  test-api-1-deployment.yml
