[tool.poetry]
name = "test-api-1"
version = "0.1.0"
description = ""
authors = ["bmotevalli <b.motevalli@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "test_api_1"}]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.22.0"
fastapi = "^0.95.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
